--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                                 <!-- Linkando css, js -->
             <script defer="defer" src="./static/js/js_app.js"></script>
             <link href="./static/css/css_app.css" rel="stylesheet">
-            <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css" />
+            <link rel="stylesheet" media="screen and (max-width: 768px)" href="./static/css/mobile.css" />
 
                                     <!-- jquery/mobili -->
             <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
