--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                     </p>
                                     <div data-role="header" id="parte2"></div>
                                     
-                                    <img class="logo4" src="https://lh3.googleusercontent.com/pw/AIL4fc8wYK7ljSngeJq74RJ_ihUlPiednoNAdT9Wf23t43v2u3VJcDVo96PwBQFUH9f8LryZX_vMxTcoYPiMXXsh4AVANaEriSrtuI8VkkUiCG48Myk6fFJmcdSQ_arV1onqwjlv88_bEvWkNNcIduJUhuJb=w370-h240-s-no?authuser=1" alt="logo4" title="LOGO4"/>
+<!--                                     <img class="logo4" src="https://lh3.googleusercontent.com/pw/AIL4fc8wYK7ljSngeJq74RJ_ihUlPiednoNAdT9Wf23t43v2u3VJcDVo96PwBQFUH9f8LryZX_vMxTcoYPiMXXsh4AVANaEriSrtuI8VkkUiCG48Myk6fFJmcdSQ_arV1onqwjlv88_bEvWkNNcIduJUhuJb=w370-h240-s-no?authuser=1" alt="logo4" title="LOGO4"/> -->
                         
                                     <a class="whats" href="https://web.whatsapp.com/send?phone=5519997354201" target="_blank">
                                         <i class="fa fa-whatsapp"></i>
