--- a/index.html
+++ b/index.html
@@ -533,9 +533,8 @@
                     <p class="atenc_13">ATENÇÃO!</p>
                     <p class="corp_13">Produto feito a pedido entre em contato.</p>
                         <!-- Bloco_15 -->
-                        <a data-fancybox="gallery" href="https://youtu.be/Za_1cayWTHM" class="fotos" rel="conjunto" title="Painel" alt="PAINEL"> 
-                            <img class="img15" src="https://lh3.googleusercontent.com/pw/AIL4fc9itmpXOi__ghs_RJps6wsQgxufkA2PPv47jRjVXWMZOQOz6ZFti1z4aj0mZ6U9QAWK4qs7LWeLR2A1q4pPZ6mszIs78yycgpcwMFbdPVkX0lvETVu8A-DWhKarBIBe_Y24YAHJaPLPDOr0-BWRP8HV=w617-h610-s-no?authuser=1" alt="PAINEL" title="Painel" />  
-                        </a>
+                        <a href="https://lh3.googleusercontent.com/pw/AIL4fc8oZH54d69S-s2JbpjIqbn_fyia25YfZ_FFWQm_tx25zJpEHpusUuUzT_xsm_xHNCZV9jkrJdGPwDrtxxH_gGwLWsVZjttioG_5t6CoGnMu5o5WuuBfe5Ggj_zq265VIiLM4718qlb_8hUn2auOot7d=w669-h661-s-no?authuser=1" title="ARMARIO"data-lightbox="y"> <img class="img15" src="https://lh3.googleusercontent.com/pw/AIL4fc8oZH54d69S-s2JbpjIqbn_fyia25YfZ_FFWQm_tx25zJpEHpusUuUzT_xsm_xHNCZV9jkrJdGPwDrtxxH_gGwLWsVZjttioG_5t6CoGnMu5o5WuuBfe5Ggj_zq265VIiLM4718qlb_8hUn2auOot7d=w669-h661-s-no?authuser=1" alt="ARMARIO" title="ARMARIO" /> </a>
+                        <a href="https://lh3.googleusercontent.com/pw/AIL4fc8oZH54d69S-s2JbpjIqbn_fyia25YfZ_FFWQm_tx25zJpEHpusUuUzT_xsm_xHNCZV9jkrJdGPwDrtxxH_gGwLWsVZjttioG_5t6CoGnMu5o5WuuBfe5Ggj_zq265VIiLM4718qlb_8hUn2auOot7d=w669-h661-s-no?authuser=1" title="ARMARIO"data-lightbox="y"> <img class="img15" src="https://lh3.googleusercontent.com/pw/AIL4fc8oZH54d69S-s2JbpjIqbn_fyia25YfZ_FFWQm_tx25zJpEHpusUuUzT_xsm_xHNCZV9jkrJdGPwDrtxxH_gGwLWsVZjttioG_5t6CoGnMu5o5WuuBfe5Ggj_zq265VIiLM4718qlb_8hUn2auOot7d=w669-h661-s-no?authuser=1" alt="ARMARIO" title="ARMARIO" /> </a>
                     
                     <span class="feature-title-14">SALA | PAINEL</span>
                     <p class="af-14">Propósito. Antes é da hora. Jesus bicicleta que é felicidade, o azul? Diz-me quer e the Por your a pelo você pra de bicicleta .</p>
